--- a/outputs/data/clea_data.ipynb
+++ b/outputs/data/clea_data.ipynb
@@ -2,29 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": null,
    "id": "ccadfc09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import the dependencies \n",
+    "# import the dependencies\n",
     "import pandas as pd\n",
     "import ast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "id": "f44d287e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_unclean = pd.read_csv(\"./listings__20251027_061613.csv\")\n"
+    "df = pd.read_csv(\"./listings__20251027_061613.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
+   "id": "feca373a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_unclean = df.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "aff6518a",
    "metadata": {},
    "outputs": [
@@ -162,7 +172,7 @@
        "4   GH₵ 3,500  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "id": "92c5e5dc",
    "metadata": {},
    "outputs": [
@@ -185,19 +195,19 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#grab all columns\n",
+    "# grab all columns\n",
     "df_unclean.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 62,
    "id": "8335b76e",
    "metadata": {},
    "outputs": [
@@ -230,69 +240,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": null,
+   "id": "5f5707f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getSubLoc(loc):\n",
+    "    parts = str(loc).split(\",\")\n",
+    "    if len(parts) >= 3:\n",
+    "        return parts[1].strip()\n",
+    "    return parts[0]\n",
+    "\n",
+    "\n",
+    "df[\"sub_loc\"] = df[\"location\"].apply(getSubLoc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0db57cfd",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clean_all(data):\n",
-    "    #change the dictionary-like string  into a real dictionary \n",
+    "    # change the dictionary-like string  into a real dictionary\n",
     "    data[\"prop_dict\"] = data[\"properties\"].apply(ast.literal_eval)\n",
-    "    \n",
-    "    #Extracting some variables \n",
-    "    data[\"new_location\"] = data['location'].str.split(\",\", expand=True)[1]\n",
+    "\n",
+    "    # Extracting some variables\n",
+    "\n",
+    "    # data[\"new_location\"] = data[\"location\"].str.split(\",\", expand=True)[1]\n",
     "    data[\"distance1\"] = data[\"location\"].str.split(\",\", expand=True)[2]\n",
     "    data[\"distance2\"] = data[\"location\"].str.split(\",\", expand=True)[3]\n",
-    "    data[\"n_bathrooms\"] = data[\"bathrooms\"].str.split(\" \",expand=True)[0]\n",
+    "    data[\"n_bathrooms\"] = data[\"bathrooms\"].str.split(\" \", expand=True)[0]\n",
     "    data[\"n_bedroomns\"] = data[\"bedrooms\"].str.split(\" \", expand=True)[0]\n",
-    "    data[\"Prices\"] =data[\"price\"].str.split(\" \",expand=True)[1].str.replace(\",\",\"\").astype(float)\n",
-    "    \n",
-    "    #drop some redundant variabbles\n",
-    "    data.drop([\"url\",\"title\",\"location\", \"bathrooms\",\"bedrooms\",\"properties\",\"price\"],axis=1, inplace = True)\n",
-    "    \n",
+    "    data[\"Prices\"] = (\n",
+    "        data[\"price\"].str.split(\" \", expand=True)[1].str.replace(\",\", \"\").astype(float)\n",
+    "    )\n",
+    "\n",
+    "    # drop some redundant variabbles\n",
+    "    data.drop(\n",
+    "        [\"url\", \"title\", \"location\", \"bathrooms\", \"bedrooms\", \"properties\", \"price\"],\n",
+    "        axis=1,\n",
+    "        inplace=True,\n",
+    "    )\n",
+    "\n",
+    "\n",
     "clean_all(df_unclean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "id": "ddf4aa3d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_prop(property_info):\n",
     "    if isinstance(property_info, dict):\n",
-    "        return pd.Series({\n",
-    "                \"Property Address\":property_info.get(\"Property Address\", None),\n",
+    "        return pd.Series(\n",
+    "            {\n",
+    "                \"Property Address\": property_info.get(\"Property Address\", None),\n",
     "                \"Property Size\": property_info.get(\"Property Size\", None),\n",
-    "                \"Condition\":property_info.get(\"Condition\", None),\n",
-    "                \"Furnishing\":property_info.get(\"Furnishing\", None),\n",
-    "                \"Minimum Rental Period\":property_info.get(\"Minimum Rental Period\", None)\n",
-    "            })\n",
-    "    return pd.Series({\n",
-    "        \"Property Address\": None,\n",
-    "        \"Property Size\": None,\n",
-    "        \"Condition\":None,\n",
-    "        \"Furnishing\": None,\n",
-    "        \"Minimum Rental Period\":None   \n",
-    "    }) \n",
+    "                \"Condition\": property_info.get(\"Condition\", None),\n",
+    "                \"Furnishing\": property_info.get(\"Furnishing\", None),\n",
+    "                \"Minimum Rental Period\": property_info.get(\n",
+    "                    \"Minimum Rental Period\", None\n",
+    "                ),\n",
+    "            }\n",
+    "        )\n",
+    "    return pd.Series(\n",
+    "        {\n",
+    "            \"Property Address\": None,\n",
+    "            \"Property Size\": None,\n",
+    "            \"Condition\": None,\n",
+    "            \"Furnishing\": None,\n",
+    "            \"Minimum Rental Period\": None,\n",
+    "        }\n",
+    "    )\n",
     "\n",
-    "df_unclean[[\"Property Address\",\"Property Size\",\"Condition\",\"Furnishing\",\"Minimum Rental Period\"]] = df_unclean[\"prop_dict\"].apply(extract_prop)"
+    "\n",
+    "df_unclean[\n",
+    "    [\n",
+    "        \"Property Address\",\n",
+    "        \"Property Size\",\n",
+    "        \"Condition\",\n",
+    "        \"Furnishing\",\n",
+    "        \"Minimum Rental Period\",\n",
+    "    ]\n",
+    "] = df_unclean[\"prop_dict\"].apply(extract_prop)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": null,
    "id": "3fbfc0c2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_unclean.drop(\"prop_dict\",axis=1,inplace=True)"
+    "df_unclean.drop(\"prop_dict\", axis=1, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +489,7 @@
        "4            15  Fairly Used     Unfurnished              12 Month  "
       ]
      },
-     "execution_count": 202,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,13 +503,76 @@
    "execution_count": null,
    "id": "368fb171",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([' North Legon', ' Ashaley Botwe', ' Adenta', ' Cantonments',\n",
+       "       ' East Legon', ' Teshie', ' Abokobi', ' Oyarifa', ' Achimota',\n",
+       "       ' Ga West Municipal', ' Amrahia', ' Dome', ' Tantra Hills',\n",
+       "       ' Spintex', ' Adjiriganor', ' Abelemkpe', ' Pokuase',\n",
+       "       ' McCarthy Hill', ' Agbogba', ' West Legon', ' Old Ashomang',\n",
+       "       ' Accra Metropolitan', ' Airport Residential Area', ' Haatso',\n",
+       "       ' Tema Metropolitan', ' Taifa-Burkina', ' Gbawe', ' Ablekuma',\n",
+       "       ' Weija', ' Madina', ' Awoshie', ' Nungua', ' Ofankor',\n",
+       "       ' Dansoman', ' Oyibi', ' Ga South Municipal', ' Ashomang Estate',\n",
+       "       ' Ashaiman Municipal', ' Odorkor', ' Lapaz', ' Kasoa', ' Osu',\n",
+       "       ' Sowutwuom', ' Dzorwulu', ' Kaneshie', ' Darkuman', ' Mataheko',\n",
+       "       ' 2 hours ago', ' Kotobabi', ' Lartebiokoshie', ' Tesano',\n",
+       "       ' Labadi', ' Anyaa', ' Labone', ' Ga East Municipal',\n",
+       "       ' Burma Camp', ' Ridge', ' Dworwulu', ' 1 hour ago',\n",
+       "       ' Asylum Down', ' Danfa', ' Santa Maria', ' North Industrial Area',\n",
+       "       ' Nima', ' Dodowa', ' Roman Ridge', ' Kwashieman',\n",
+       "       ' Ledzokuku-Krowor', ' Adabraka', ' Kokomlemle', ' Mamprobi',\n",
+       "       ' 13 min ago', ' Accra New Town', ' Banana Inn', ' Abofu',\n",
+       "       ' Bubuashie', ' South La', ' Alajo', ' South Shiashie',\n",
+       "       ' 44 min ago', ' 52 min ago', ' Circle', ' Lartebiokorshie',\n",
+       "       ' Little Legon', ' Ningo-Prampram', ' Korle Gonno', ' 1 day ago',\n",
+       "       ' 21/10', ' 16/09', ' 09/09', ' 31/08', ' 12/08'], dtype=object)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_unclean[\"new_location\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c9c80789",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"{'Property Address': 'Oyarifa', 'Estate Name': 'Oyarifa', 'Property Size': '100', 'Subtype': 'Detached', 'Condition': 'Newly-Built', 'Furnishing': 'Unfurnished', 'Toilets': '4'}\""
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"properties\"].iloc[37]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cfe5aba",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "edu",
    "language": "python",
    "name": "python3"
   },
@@ -473,7 +586,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
