all changes infected

--- a/outputs/data/clea_data.ipynb
+++ b/outputs/data/clea_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 180,
    "id": "ccadfc09",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 181,
    "id": "f44d287e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 182,
    "id": "aff6518a",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
        "4   GH₵ 3,500  "
       ]
      },
-     "execution_count": 195,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 183,
    "id": "92c5e5dc",
    "metadata": {},
    "outputs": [
@@ -185,7 +185,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 184,
    "id": "8335b76e",
    "metadata": {},
    "outputs": [
@@ -230,7 +230,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 185,
+   "id": "30a6eaef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Greater Accra, North Legon, 3 hours ago',\n",
+       "       'Greater Accra, Ashaley Botwe, Ashaley Botwe School Junction, 3 hours ago',\n",
+       "       'Greater Accra, Adenta, Malejor, 3 hours ago', ...,\n",
+       "       'Greater Accra, Ablekuma, 29/07',\n",
+       "       'Greater Accra, Awoshie, A-Lang / Awoshie, 03/06',\n",
+       "       'Greater Accra, Tema Metropolitan, 29/07'],\n",
+       "      shape=(4533,), dtype=object)"
+      ]
+     },
+     "execution_count": 185,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_unclean.location.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "id": "0426483f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['North Legon', 'Ashaley Botwe', 'Adenta', 'Cantonments',\n",
+       "       'East Legon', 'Teshie', 'Abokobi', 'Oyarifa', 'Achimota',\n",
+       "       'Ga West Municipal', 'Amrahia', 'Dome', 'Tantra Hills', 'Spintex',\n",
+       "       'Adjiriganor', 'Abelemkpe', 'Pokuase', 'McCarthy Hill', 'Agbogba',\n",
+       "       'West Legon', 'Old Ashomang', 'Accra Metropolitan',\n",
+       "       'Airport Residential Area', 'Haatso', 'Tema Metropolitan',\n",
+       "       'Taifa-Burkina', 'Gbawe', 'Ablekuma', 'Weija', 'Madina', 'Awoshie',\n",
+       "       'Nungua', 'Ofankor', 'Dansoman', 'Oyibi', 'Ga South Municipal',\n",
+       "       'Ashomang Estate', 'Ashaiman Municipal', 'Odorkor', 'Lapaz',\n",
+       "       'Kasoa', 'Osu', 'Sowutwuom', 'Dzorwulu', 'Kaneshie', 'Darkuman',\n",
+       "       'Mataheko', '2 hours ago', 'Kotobabi', 'Lartebiokoshie', 'Tesano',\n",
+       "       'Labadi', 'Anyaa', 'Labone', 'Ga East Municipal', 'Burma Camp',\n",
+       "       'Ridge', 'Dworwulu', '1 hour ago', 'Asylum Down', 'Danfa',\n",
+       "       'Santa Maria', 'North Industrial Area', 'Nima', 'Dodowa',\n",
+       "       'Roman Ridge', 'Kwashieman', 'Ledzokuku-Krowor', 'Adabraka',\n",
+       "       'Kokomlemle', 'Mamprobi', '13 min ago', 'Accra New Town',\n",
+       "       'Banana Inn', 'Abofu', 'Bubuashie', 'South La', 'Alajo',\n",
+       "       'South Shiashie', '44 min ago', '52 min ago', 'Circle',\n",
+       "       'Lartebiokorshie', 'Little Legon', 'Ningo-Prampram', 'Korle Gonno',\n",
+       "       '1 day ago', '21/10', '16/09', '09/09', '31/08', '12/08'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_unclean[\"sub_loc\"]  = df_unclean[\"location\"].str.split(\",\").str.get(1).str.strip()\n",
+    "df_unclean[\"sub_loc\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
    "id": "0db57cfd",
    "metadata": {},
    "outputs": [],
@@ -239,23 +308,40 @@
     "    #change the dictionary-like string  into a real dictionary \n",
     "    data[\"prop_dict\"] = data[\"properties\"].apply(ast.literal_eval)\n",
     "    \n",
+    "    #function to work on the location\n",
+    "    def getSubLoc(loc):\n",
+    "        parts = str(loc).split(\",\")\n",
+    "        if len(parts) >= 3:\n",
+    "            return parts[1].strip()\n",
+    "        return parts[0]\n",
+    "    \n",
     "    #Extracting some variables \n",
-    "    data[\"new_location\"] = data['location'].str.split(\",\", expand=True)[1]\n",
-    "    data[\"distance1\"] = data[\"location\"].str.split(\",\", expand=True)[2]\n",
-    "    data[\"distance2\"] = data[\"location\"].str.split(\",\", expand=True)[3]\n",
+    "    df_unclean[\"sub_loc\"] = df_unclean[\"location\"].apply(getSubLoc)\n",
+    "    \n",
+    "    \n",
+    "    # df_unclean[\"sub_loc\"].unique()\n",
     "    data[\"n_bathrooms\"] = data[\"bathrooms\"].str.split(\" \",expand=True)[0]\n",
     "    data[\"n_bedroomns\"] = data[\"bedrooms\"].str.split(\" \", expand=True)[0]\n",
     "    data[\"Prices\"] =data[\"price\"].str.split(\" \",expand=True)[1].str.replace(\",\",\"\").astype(float)\n",
     "    \n",
+    "    \n",
+    "    #Work on the amenities\n",
+    "    #get all the amenities in a list form\n",
+    "    amenities_list = df_unclean[\"amenities\"].str.split(\",\", expand=True)[0].value_counts().index.to_list()\n",
+    "    \n",
+    "    #loop through all the list of amenities and create new column for each amenity\n",
+    "    for amenity in amenities_list:\n",
+    "        data[amenity] = data[\"amenities\"].str.contains(amenity,na=False).astype(int)\n",
+    "    \n",
     "    #drop some redundant variabbles\n",
-    "    data.drop([\"url\",\"title\",\"location\", \"bathrooms\",\"bedrooms\",\"properties\",\"price\"],axis=1, inplace = True)\n",
+    "    data.drop([\"url\",\"title\",\"amenities\",\"location\",\"bathrooms\",\"bedrooms\",\"properties\",\"price\"],axis=1, inplace = True)\n",
     "    \n",
     "clean_all(df_unclean)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 188,
    "id": "ddf4aa3d",
    "metadata": {},
    "outputs": [],
@@ -282,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 189,
    "id": "3fbfc0c2",
    "metadata": {},
    "outputs": [],
@@ -292,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
@@ -317,13 +403,21 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>house_type</th>\n",
-       "      <th>amenities</th>\n",
-       "      <th>new_location</th>\n",
-       "      <th>distance1</th>\n",
-       "      <th>distance2</th>\n",
+       "      <th>sub_loc</th>\n",
        "      <th>n_bathrooms</th>\n",
        "      <th>n_bedroomns</th>\n",
        "      <th>Prices</th>\n",
+       "      <th>24-hour Electricity</th>\n",
+       "      <th>Air Conditioning</th>\n",
+       "      <th>Balcony</th>\n",
+       "      <th>Kitchen Cabinets</th>\n",
+       "      <th>Dining Area</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Chandelier</th>\n",
+       "      <th>Microwave</th>\n",
+       "      <th>Wi-Fi</th>\n",
+       "      <th>TV</th>\n",
+       "      <th>Refrigerator</th>\n",
        "      <th>Property Address</th>\n",
        "      <th>Property Size</th>\n",
        "      <th>Condition</th>\n",
@@ -335,13 +429,21 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>North Legon</td>\n",
-       "      <td>3 hours ago</td>\n",
-       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2500.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>North Legon</td>\n",
        "      <td>15</td>\n",
        "      <td>Fairly Used</td>\n",
@@ -351,13 +453,21 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Ashaley Botwe</td>\n",
-       "      <td>Ashaley Botwe School Junction</td>\n",
-       "      <td>3 hours ago</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>School Junction</td>\n",
        "      <td>25</td>\n",
        "      <td>Newly-Built</td>\n",
@@ -367,13 +477,21 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Adenta</td>\n",
-       "      <td>Malejor</td>\n",
-       "      <td>3 hours ago</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Major</td>\n",
        "      <td>100</td>\n",
        "      <td>Newly-Built</td>\n",
@@ -383,13 +501,21 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>House</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>Cantonments</td>\n",
-       "      <td>3 hours ago</td>\n",
-       "      <td>None</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>72000.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>Cantonment</td>\n",
        "      <td>5000</td>\n",
        "      <td>Newly-Built</td>\n",
@@ -399,13 +525,21 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>NaN</td>\n",
        "      <td>East Legon</td>\n",
-       "      <td>American House</td>\n",
-       "      <td>3 hours ago</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3500.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>American House</td>\n",
        "      <td>15</td>\n",
        "      <td>Fairly Used</td>\n",
@@ -414,32 +548,49 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  house_type amenities    new_location                       distance1  \\\n",
-       "0  Apartment       NaN     North Legon                     3 hours ago   \n",
-       "1  Apartment       NaN   Ashaley Botwe   Ashaley Botwe School Junction   \n",
-       "2  Apartment       NaN          Adenta                         Malejor   \n",
-       "3      House       NaN     Cantonments                     3 hours ago   \n",
-       "4  Apartment       NaN      East Legon                  American House   \n",
+       "  house_type        sub_loc n_bathrooms n_bedroomns   Prices  \\\n",
+       "0  Apartment    North Legon           1           1   2500.0   \n",
+       "1  Apartment  Ashaley Botwe           2           2   3000.0   \n",
+       "2  Apartment         Adenta           2           2   2000.0   \n",
+       "3      House    Cantonments           4           4  72000.0   \n",
+       "4  Apartment     East Legon           1           1   3500.0   \n",
        "\n",
-       "      distance2 n_bathrooms n_bedroomns   Prices Property Address  \\\n",
-       "0          None           1           1   2500.0      North Legon   \n",
-       "1   3 hours ago           2           2   3000.0  School Junction   \n",
-       "2   3 hours ago           2           2   2000.0            Major   \n",
-       "3          None           4           4  72000.0       Cantonment   \n",
-       "4   3 hours ago           1           1   3500.0   American House   \n",
+       "   24-hour Electricity  Air Conditioning  Balcony  Kitchen Cabinets  \\\n",
+       "0                    0                 0        0                 0   \n",
+       "1                    0                 0        0                 0   \n",
+       "2                    0                 0        0                 0   \n",
+       "3                    0                 0        0                 0   \n",
+       "4                    0                 0        0                 0   \n",
        "\n",
-       "  Property Size    Condition      Furnishing Minimum Rental Period  \n",
-       "0            15  Fairly Used     Unfurnished              12 Month  \n",
-       "1            25  Newly-Built     Unfurnished              12 Month  \n",
-       "2           100  Newly-Built  Semi-Furnished              12 Month  \n",
-       "3          5000  Newly-Built     Unfurnished                  None  \n",
-       "4            15  Fairly Used     Unfurnished              12 Month  "
+       "   Dining Area  ...  Chandelier  Microwave  Wi-Fi  TV  Refrigerator  \\\n",
+       "0            0  ...           0          0      0   0             0   \n",
+       "1            0  ...           0          0      0   0             0   \n",
+       "2            0  ...           0          0      0   0             0   \n",
+       "3            0  ...           0          0      0   0             0   \n",
+       "4            0  ...           0          0      0   0             0   \n",
+       "\n",
+       "   Property Address  Property Size    Condition      Furnishing  \\\n",
+       "0       North Legon             15  Fairly Used     Unfurnished   \n",
+       "1   School Junction             25  Newly-Built     Unfurnished   \n",
+       "2             Major            100  Newly-Built  Semi-Furnished   \n",
+       "3        Cantonment           5000  Newly-Built     Unfurnished   \n",
+       "4    American House             15  Fairly Used     Unfurnished   \n",
+       "\n",
+       "   Minimum Rental Period  \n",
+       "0               12 Month  \n",
+       "1               12 Month  \n",
+       "2               12 Month  \n",
+       "3                   None  \n",
+       "4               12 Month  \n",
+       "\n",
+       "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "368fb171",
+   "id": "4750ed03",
    "metadata": {},
    "outputs": [],
    "source": []
