Updated cleaning notebook

--- a/outputs/data/clea_data.ipynb
+++ b/outputs/data/clea_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "ccadfc09",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "f44d287e",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "feca373a",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 28,
    "id": "aff6518a",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
        "4   GH₵ 3,500  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "92c5e5dc",
    "metadata": {},
    "outputs": [
@@ -195,7 +195,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 30,
    "id": "8335b76e",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "5f5707f5",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "0db57cfd",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "ddf4aa3d",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3fbfc0c2",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -367,21 +367,12 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>house_type</th>\n",
-       "      <th>sub_loc</th>\n",
+       "      <th>amenities</th>\n",
+       "      <th>distance1</th>\n",
+       "      <th>distance2</th>\n",
        "      <th>n_bathrooms</th>\n",
        "      <th>n_bedroomns</th>\n",
        "      <th>Prices</th>\n",
-       "      <th>24-hour Electricity</th>\n",
-       "      <th>Air Conditioning</th>\n",
-       "      <th>Balcony</th>\n",
-       "      <th>Kitchen Cabinets</th>\n",
-       "      <th>Dining Area</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Chandelier</th>\n",
-       "      <th>Microwave</th>\n",
-       "      <th>Wi-Fi</th>\n",
-       "      <th>TV</th>\n",
-       "      <th>Refrigerator</th>\n",
        "      <th>Property Address</th>\n",
        "      <th>Property Size</th>\n",
        "      <th>Condition</th>\n",
@@ -393,21 +384,12 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>North Legon</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3 hours ago</td>\n",
+       "      <td>None</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2500.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>North Legon</td>\n",
        "      <td>15</td>\n",
        "      <td>Fairly Used</td>\n",
@@ -417,21 +399,12 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>Ashaley Botwe</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Ashaley Botwe School Junction</td>\n",
+       "      <td>3 hours ago</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>3000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>School Junction</td>\n",
        "      <td>25</td>\n",
        "      <td>Newly-Built</td>\n",
@@ -441,21 +414,12 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>Adenta</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Malejor</td>\n",
+       "      <td>3 hours ago</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>Major</td>\n",
        "      <td>100</td>\n",
        "      <td>Newly-Built</td>\n",
@@ -465,21 +429,12 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>House</td>\n",
-       "      <td>Cantonments</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3 hours ago</td>\n",
+       "      <td>None</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
        "      <td>72000.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>Cantonment</td>\n",
        "      <td>5000</td>\n",
        "      <td>Newly-Built</td>\n",
@@ -489,21 +444,12 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Apartment</td>\n",
-       "      <td>East Legon</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>American House</td>\n",
+       "      <td>3 hours ago</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>3500.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>American House</td>\n",
        "      <td>15</td>\n",
        "      <td>Fairly Used</td>\n",
@@ -512,49 +458,32 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  house_type        sub_loc n_bathrooms n_bedroomns   Prices  \\\n",
-       "0  Apartment    North Legon           1           1   2500.0   \n",
-       "1  Apartment  Ashaley Botwe           2           2   3000.0   \n",
-       "2  Apartment         Adenta           2           2   2000.0   \n",
-       "3      House    Cantonments           4           4  72000.0   \n",
-       "4  Apartment     East Legon           1           1   3500.0   \n",
+       "  house_type amenities                       distance1     distance2  \\\n",
+       "0  Apartment       NaN                     3 hours ago          None   \n",
+       "1  Apartment       NaN   Ashaley Botwe School Junction   3 hours ago   \n",
+       "2  Apartment       NaN                         Malejor   3 hours ago   \n",
+       "3      House       NaN                     3 hours ago          None   \n",
+       "4  Apartment       NaN                  American House   3 hours ago   \n",
        "\n",
-       "   24-hour Electricity  Air Conditioning  Balcony  Kitchen Cabinets  \\\n",
-       "0                    0                 0        0                 0   \n",
-       "1                    0                 0        0                 0   \n",
-       "2                    0                 0        0                 0   \n",
-       "3                    0                 0        0                 0   \n",
-       "4                    0                 0        0                 0   \n",
+       "  n_bathrooms n_bedroomns   Prices Property Address Property Size  \\\n",
+       "0           1           1   2500.0      North Legon            15   \n",
+       "1           2           2   3000.0  School Junction            25   \n",
+       "2           2           2   2000.0            Major           100   \n",
+       "3           4           4  72000.0       Cantonment          5000   \n",
+       "4           1           1   3500.0   American House            15   \n",
        "\n",
-       "   Dining Area  ...  Chandelier  Microwave  Wi-Fi  TV  Refrigerator  \\\n",
-       "0            0  ...           0          0      0   0             0   \n",
-       "1            0  ...           0          0      0   0             0   \n",
-       "2            0  ...           0          0      0   0             0   \n",
-       "3            0  ...           0          0      0   0             0   \n",
-       "4            0  ...           0          0      0   0             0   \n",
-       "\n",
-       "   Property Address  Property Size    Condition      Furnishing  \\\n",
-       "0       North Legon             15  Fairly Used     Unfurnished   \n",
-       "1   School Junction             25  Newly-Built     Unfurnished   \n",
-       "2             Major            100  Newly-Built  Semi-Furnished   \n",
-       "3        Cantonment           5000  Newly-Built     Unfurnished   \n",
-       "4    American House             15  Fairly Used     Unfurnished   \n",
-       "\n",
-       "   Minimum Rental Period  \n",
-       "0               12 Month  \n",
-       "1               12 Month  \n",
-       "2               12 Month  \n",
-       "3                   None  \n",
-       "4               12 Month  \n",
-       "\n",
-       "[5 rows x 28 columns]"
+       "     Condition      Furnishing Minimum Rental Period  \n",
+       "0  Fairly Used     Unfurnished              12 Month  \n",
+       "1  Newly-Built     Unfurnished              12 Month  \n",
+       "2  Newly-Built  Semi-Furnished              12 Month  \n",
+       "3  Newly-Built     Unfurnished                  None  \n",
+       "4  Fairly Used     Unfurnished              12 Month  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,40 +494,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "4750ed03",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([' North Legon', ' Ashaley Botwe', ' Adenta', ' Cantonments',\n",
-       "       ' East Legon', ' Teshie', ' Abokobi', ' Oyarifa', ' Achimota',\n",
-       "       ' Ga West Municipal', ' Amrahia', ' Dome', ' Tantra Hills',\n",
-       "       ' Spintex', ' Adjiriganor', ' Abelemkpe', ' Pokuase',\n",
-       "       ' McCarthy Hill', ' Agbogba', ' West Legon', ' Old Ashomang',\n",
-       "       ' Accra Metropolitan', ' Airport Residential Area', ' Haatso',\n",
-       "       ' Tema Metropolitan', ' Taifa-Burkina', ' Gbawe', ' Ablekuma',\n",
-       "       ' Weija', ' Madina', ' Awoshie', ' Nungua', ' Ofankor',\n",
-       "       ' Dansoman', ' Oyibi', ' Ga South Municipal', ' Ashomang Estate',\n",
-       "       ' Ashaiman Municipal', ' Odorkor', ' Lapaz', ' Kasoa', ' Osu',\n",
-       "       ' Sowutwuom', ' Dzorwulu', ' Kaneshie', ' Darkuman', ' Mataheko',\n",
-       "       ' 2 hours ago', ' Kotobabi', ' Lartebiokoshie', ' Tesano',\n",
-       "       ' Labadi', ' Anyaa', ' Labone', ' Ga East Municipal',\n",
-       "       ' Burma Camp', ' Ridge', ' Dworwulu', ' 1 hour ago',\n",
-       "       ' Asylum Down', ' Danfa', ' Santa Maria', ' North Industrial Area',\n",
-       "       ' Nima', ' Dodowa', ' Roman Ridge', ' Kwashieman',\n",
-       "       ' Ledzokuku-Krowor', ' Adabraka', ' Kokomlemle', ' Mamprobi',\n",
-       "       ' 13 min ago', ' Accra New Town', ' Banana Inn', ' Abofu',\n",
-       "       ' Bubuashie', ' South La', ' Alajo', ' South Shiashie',\n",
-       "       ' 44 min ago', ' 52 min ago', ' Circle', ' Lartebiokorshie',\n",
-       "       ' Little Legon', ' Ningo-Prampram', ' Korle Gonno', ' 1 day ago',\n",
-       "       ' 21/10', ' 16/09', ' 09/09', ' 31/08', ' 12/08'], dtype=object)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'new_location'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\os\\miniconda3\\envs\\edu\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'new_location'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf_unclean\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mnew_location\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m.unique()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\os\\miniconda3\\envs\\edu\\Lib\\site-packages\\pandas\\core\\frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\os\\miniconda3\\envs\\edu\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'new_location'"
+     ]
     }
    ],
    "source": [
